--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 authors = ["Jeron A. Lau <jeron.lau@plopgrizzly.com>"]
 
 [dependencies]
+# For Color Translations & sRGBA VFrame.
+afi = { path = "../afi" }
+# For Text Rendering
+fonterator = { path = "../fonterator" }
+# For Vector Math
+ami = "0.13"
+# Renderer
+arrayvec = { version = "0.4", default-features = false }
+ordered-float = "0.5"
+approx = { version = "0.3", default-features = false }
+
+[dev-dependencies]
+png = "0.12"
