--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "barg"
 version = "0.1.0"
-authors = ["Jeron A. Lau <jeron.lau@plopgrizzly.com>"]
+authors = ["Jeron Lau <jeron.lau@plopgrizzly.com>"]
 
 [dependencies]
 # For Color Translations & sRGBA VFrame.
