Add back() to get back icon.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ window = { path = "../window" }
 # For Rendering Including Text
 fonterator = "0.4"
 # For Loading RVG Files.
-rvg = "0.0.1" # { path = "../rvg" }
+rvg = { path = "../rvg", features = ["footile"] }
 
 [build-dependencies]
 res = "0.3"
