--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ window = { path = "../window" }
 # For Rendering Including Text
 fonterator = "0.4"
 # For Loading RVG Files.
-rvg = { path = "../rvg", features = ["footile"] }
+rvg = { version = "0.0.2", features = ["footile"] }
 
 [build-dependencies]
 res = "0.3"
